# CRYPTOGRAPHY-task-2

./: CMakeLists.txt  attack_model  attack_modeling.c  generate_clocks_experiment.py  generator_autoguess.py  main.c  output  output_graph  strumok.c  strumok.h  strumok_autoguess.txt  strumok_tables.h
clock_experiments/: strumok512_10clocks.txt  strumok512_12clocks.txt  strumok512_13clocks.txt  strumok512_14clocks.txt  strumok512_8clocks.txt  strumok512_9clocks.txt
